fix: scrollbar for Android

--- a/src/styles/vsb.scss
+++ b/src/styles/vsb.scss
@@ -48,14 +48,16 @@
 
   // Специально для touch устройств
   @media (pointer: coarse) {
+    width: 30px;
+
     &::-webkit-scrollbar {
-      width: 12px;
-      height: 12px;
+      width: 16px;
     }
 
     &::-webkit-scrollbar-thumb {
       background: rgba(0, 0, 0, 0.4);
-      min-height: 30px;
+      min-height: 60px;
+      border-radius: 10px;
     }
   }
 
